# pyadblock

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
pyadblock/: core.py  init_rules.py  main.py
pyadblock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pyadblock/core/: engine.py
pyadblock/tests/: test_core.py
rules/: baseline.udr
