[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyadblock"
version = "0.1.0"
description = "A unique and modern Python-based ad blocker"
authors = [{name = "sanjay", email = "sheel1997sanjay@email.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.setuptools.package-data]
"pyadblock" = ["pyadblock/rules/*.udr"]

dependencies = []

[project.scripts]
pyadblock = "pyadblock.main:main"
