[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
license = "MIT"
version = "0.1.0"
name = "pyadblock"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["classifiers"]
description = "A unique and modern Python-based ad blocker"
authors = [{name = "sanjay", email = "sheel1997sanjay@email.com"}]

[tool.setuptools.package-data]
"pyadblock" = ["pyadblock/rules/*.udr"]

dependencies = []

[project.scripts]
pyadblock = "pyadblock.main:main"
