[metadata]
name = pyadblock
version = 0.1.0
description = A unique and modern Python-based ad blocker
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
